More Spacing Fixes

--- a/src/components/background/BackgroundImage.module.scss
+++ b/src/components/background/BackgroundImage.module.scss
@@ -16,6 +16,5 @@
     height: 100%;
     justify-content: flex-start;
     align-items: center;
-    padding: 3em;
   }
 }
